force-app/main/default/objects/echosign_dev1__SIGN_Form_Field_Import__c/echosign_dev1__SIGN_Form_Field_Import__c.object-meta.xml
<CustomObject>
    <label>Form Field Import</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Form Field Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Field Imports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>