force-app/main/default/objects/echosign_dev1__SIGN_Form_Field_Import__c/fields/echosign_dev1__Data_Mapping__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Data_Mapping__c</fullName>
    <label>Adobe Acrobat Sign Data Mapping</label>
    <referenceTo>echosign_dev1__SIGN_Merge_Mapping__c</referenceTo>
    <relationshipLabel>Form Field Imports</relationshipLabel>
    <relationshipName>EchoSign_Form_Field_Imports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>