force-app/main/default/objects/echosign_dev1__SIGN_Form_Field_Import__c/fields/echosign_dev1__Duplicate_Form_Fields__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Duplicate_Form_Fields__c</fullName>
    <label>Duplicate Form Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>