force-app/main/default/objects/echosign_dev1__SIGN_Form_Field_Import__c/fields/echosign_dev1__Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Text Entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>